--- a/services/templates/services/landing-page.html
+++ b/services/templates/services/landing-page.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SBS</title>
 </head>
 <body>
     <img src="{% static '/services/images/salon.jpg' %}" alt="Salon-image" width="100" height="100">
